# game_of_life

./: .gitignore  Cargo.toml  flake.nix
gol_gui/: Cargo.toml
gol_gui/src/: app.rs  args.rs  file_management.rs  main.rs  settings.rs  user_actions.rs
gol_gui/src/app/: edit.rs
gol_gui/src/file_management/: blueprint_load.rs  blueprint_save.rs  board_load.rs  board_save.rs  mod.rs
gol_gui/src/settings/: keybinds.rs
gol_lib/: Cargo.toml
gol_lib/src/: area.rs  board_data.rs  cell.rs  communication.rs  display.rs  lib.rs  position.rs  simulator.rs
gol_lib/src/persistence/: board_load.rs  board_save.rs  load.rs  mod.rs  preview.rs  save.rs
gol_simple/: Cargo.toml
gol_simple/src/: lib.rs
src/: main.rs
src/logic/: board_data.rs  display.rs  mod.rs  simplistic.rs
src/ui/: file_management.rs  mod.rs  settings.rs
