[workspace]
resolver = "2"
members = ["gol_lib", "gol_gui", "gol_simple"]


# [package]
# name = "game_of_life"
# version = "0.1.0"
# edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# egui = "0.29.1"
# eframe = { version = "0.29.1", default-features = false, features = [
#   "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
#   "default_fonts", # Embed the default egui fonts.
#   "glow",          # Use the glow rendering backend. Alternative: "wgpu".
#   "persistence",   # Enable restoring app state when restarting the app.
# ] }
# log = "0.4"

# Persistence
# serde = { version = "1.0.217", features = ["derive"] }
# serde_json = "1.0.134"

# env_logger = "0.11.5"
# colog = "1.3.0"
# derive_more = { version = "1.0.0", features = ["full"] }
# spin_sleep_util = "0.1.1"
# egui-keybind = { version = "0.4.1", features = ["serde"] }
# bitvec = { version = "1.0.1", features = ["serde"] }
# app_dirs2 = "2.5.5"
# walkdir = "2.5.0"

# [dev-dependencies]
# ctor = "0.2.8"
# tempfile = "3.15.0"
