[package]
name = "gol_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.29.1"
eframe = { version = "0.29.1", default-features = false, features = [
  "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

# Persistence
serde = { version = "1.0.217", features = ["derive"] }

env_logger = "0.11.5"
egui-keybind = { version = "0.4.1", features = ["serde"] }
app_dirs2 = "2.5.5"

gol_lib = { path = "../gol_lib" }
gol_simple = { path = "../gol_simple" }
clap = { version = "4.5.23", features = ["derive"] }
