[package]
name = "gol_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
# Game of life deps
gol_lib = { path = "../gol_lib" }
gol_simple = { path = "../gol_simple" }

# Gui Deps
egui = "0.31.0"
eframe = { version = "0.31.0", features = ["persistence"] }
egui-keybind = { version = "0.6.0", features = ["serde"] }
egui-file-dialog = "0.9.0"
# Use PR until main has been updated #
egui-toast = { git = "https://github.com/urholaukkarinen/egui-toast.git", rev = "refs/pull/32/head" }

# Logging
log = "0.4"
env_logger = "0.11.5"

serde = { version = "1.0.217", features = ["derive"] }
app_dirs2 = "2.5.5"
clap = { version = "4.5.23", features = ["derive"] }
unicode-segmentation = "1.12.0"
threadpool = "1.8.1"
oneshot = "0.1.8"
kinded = "0.3.0"
thiserror = "2.0.11"

[dev-dependencies]
egui_kittest = { version = "0.31.0", features = ["eframe", "snapshot", "wgpu"] }
