[package]
name = "gol_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"

derive_more = { version = "1.0.0", features = ["full"] }
spin_sleep_util = "0.1.1"
bitvec = { version = "1.0.1", features = ["serde"] }
app_dirs2 = "2.5.5"
# walkdir = "2.5.0"
thiserror = "2.0.11"

[dev-dependencies]
kinded = "0.3.0"
tempfile = "3.15.0"
